feat: progress ajah

--- a/src/references.bib
+++ b/src/references.bib
@@ -653,3 +653,14 @@ abstract = {Deployment of software systems is a complex post-production process 
   year = {2017},
   month = jun 
 }
+
+@INPROCEEDINGS{madcat,
+  author={Inzinger, Christian and Nastic, Stefan and Sehic, Sanjin and Vögler, Michael and Li, Fei and Dustdar, Schahram},
+  booktitle={2014 IEEE 8th International Symposium on Service Oriented System Engineering}, 
+  title={MADCAT: A Methodology for Architecture and Deployment of Cloud Application Topologies}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={13-22},
+  keywords={Computer architecture;Unified modeling language;Concrete;Business;Topology;Architecture;Cloud computing;cloud computing;software development methodology;cloud-native applications},
+  doi={10.1109/SOSE.2014.9}}
