--- a/src/references.bib
+++ b/src/references.bib
@@ -663,4 +663,20 @@ abstract = {Deployment of software systems is a complex post-production process 
   number={},
   pages={13-22},
   keywords={Computer architecture;Unified modeling language;Concrete;Business;Topology;Architecture;Cloud computing;cloud computing;software development methodology;cloud-native applications},
-  doi={10.1109/SOSE.2014.9}}
+  doi={10.1109/SOSE.2014.9}
+  }
+
+  @article{Bhm2022,
+  title = {Cloud-Edge Orchestration for Smart Cities: A Review of Kubernetes-based Orchestration Architectures},
+  volume = {6},
+  ISSN = {2518-3893},
+  url = {http://dx.doi.org/10.4108/eetsc.v6i18.1197},
+  DOI = {10.4108/eetsc.v6i18.1197},
+  number = {18},
+  journal = {EAI Endorsed Transactions on Smart Cities},
+  publisher = {European Alliance for Innovation n.o.},
+  author = {B\"{o}hm,  Sebastian and Wirtz,  Guido},
+  year = {2022},
+  month = may,
+  pages = {e2}
+}
