--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -22,13 +22,13 @@
 
 \begin{document}
 
-\title{\textit{Remote Deployment} pada \textit{IoT} menggunakan Kubernetes}
+\title{\textit{Remote Deployment} pada IoT menggunakan Kubernetes}
 \date{}
 \author{
   Muhammad Garebaldhie ER Rahman \\
   NIM: 13520029
 }
-\newcommand\tanggalpengesahan{11 Juni 2024}
+\newcommand\tanggalpengesahan{12 Juni 2024}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
