--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -24,6 +24,8 @@
   a-pli-ka-si
   a-lo-ka-si
   an-ta-ra
+  ada-nya
+  akan
   
   % B
   %
@@ -31,26 +33,47 @@
   ber-ge-rak
   be-ri-kut
   ber-ko-mu-ni-ka-si
+  buah
+  Bouvet
+  ber-fo-kus
+  ber-fung-si
+  ber-ja-lan
   
   % C
   %
   ca-ri
   con-strained
+  Carzaniga
+  cloud
+  CloudFormation
+  con-tai-ner
+  ClusterIP
   
   % D
   %
   da-e-rah
-  di-nya-ta-kan```'''
+  di-nya-ta-kan
   de-fi-ni-si
   di-bu-tuh-kan
   di-gu-na-kan
   di-tam-bah-kan-nya
   di-tem-pat-kan
+  di-la-ku-kan
+  de-ploy-ment
+  di-kem-bang-kan
+  di-im-ple-men-ta-si-kan
+  de-activation
+  da-pat
+  di-ka-te-go-ri-kan
+  de-ngan
+  di-kem-bang-kan
+  da-ta
   
   % E
   %
   e-ner-gi
   eks-klu-sif
+  eks-ter-nal
   
   % F
   %
@@ -63,6 +86,8 @@
   % H
   %
   ha-lang-an
+  ha-sil
+  hell
   
   % I
   % 
@@ -72,16 +97,27 @@
   
   % J
   %
-  ka-me-ra
-  kua-li-tas
+  
   
   % K
   %
   kom-po-si-si
-  
+  ka-re-na
+  ke-sa-ba-ran-nya
+  ka-me-ra
+  kua-li-tas
+  ke-na-ngan
+  kom-plek-si-tas
+  ke-ti-ka
+  ke-le-bi-han-nya
+  Kubernetes
+  ke-gi-a-tan
+  ko-mu-ni-ka-si
+  ke-cil
   
   % L
   %
+  la-ya-nan
   
   % M
   %
@@ -89,36 +125,83 @@
   meng-eva-lu-a-si
   me-nge-lo-la
   men-da-lam
+  men-ja-lan-kan
   mak-si-mal
   me-nye-le-sai-kan
   me-ngunjungi
+  men-du-kung
+  me-nu-rut
+  me-la-ku-kan
+  mem-buat
+  men-daftar-kan
+  me-ngu-sul-kan
+  me-mi-li-ki
+  meng-gu-na-kan
+  men-ja-di
+  me-ru-pa-kan
+  men-ja-ga
+  me-mu-dah-kan
+  MicroK8s
+  me-ne-rus-
+  mem-pro-ses
+  
   % N
   %
+  Na-mun
   
   % O
   %
+  ob-so-lete
+  or-kes-tra-si
+  oto-ma-ti-sa-si
   
   % P
   %
   pro-vi-der
   pe-ru-sa-ha-an
+  pe-rang-kat
+  pro-ses
+  plat-form
+  pro-duk-si
+  pe-ne-li-tian
+  pe-ru-ba-han
+  pa-ra-dig-ma
+  pe-man-tau-an
+  pe-ngum-pu-lan
+  pa-ckage
   
   % Q
   %
+  quality
   
   % R
   %
   re-source
+  re-mote
   
   % S
   se-la-in
+  stan-dar-di-sasi
+  se-cu-ri-ty
+  so-lu-si
+  se-lu-ruh
+  Soft-ware
+  soft-ware
+  se-buah
+  se-ca-ra
+  
   %
   
   % T
   % 
+  ter-li-bat
+  ter-pi-sah-kan
+  ter-mi-nal
+  ter-ba-tas
   
   % U
   %
+  un-tuk
   
   % V
   %
