feat: update lampiran

--- a/src/references.bib
+++ b/src/references.bib
@@ -680,3 +680,14 @@ abstract = {Deployment of software systems is a complex post-production process 
   month = may,
   pages = {e2}
 }
+
+@ARTICLE{OTAKeyPrinciples,
+  author={Bauwens, Jan and Ruckebusch, Peter and Giannoulis, Spilios and Moerman, Ingrid and Poorter, Eli De},
+  journal={IEEE Communications Magazine}, 
+  title={Over-the-Air Software Updates in the Internet of Things: An Overview of Key Principles}, 
+  year={2020},
+  volume={58},
+  number={2},
+  pages={35-41},
+  keywords={Internet of Things;Wireless sensor networks;Security;Data dissemination;Computer bugs;Enregy consumption;Operating systems},
+  doi={10.1109/MCOM.001.1900125}}
