--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -22,7 +22,7 @@
 
 \begin{document}
 
-\title{\textit{Remote Deployment} pada IoT menggunakan Kubernetes}
+\title{Desain dan Implementasi Sistem \textit{Remote Deployment} pada Perangkat IoT}
 \date{}
 \author{
   Muhammad Garebaldhie ER Rahman \\
@@ -40,7 +40,7 @@
 \pagestyle{plain}
 
 \input{chapters/abstract-id}
-% \input{chapters/abstract-en}
+\input{chapters/abstract-en}
 \input{chapters/forewords}
 
 \titleformat*{\section}{\centering\bfseries\Large\MakeUpperCase}
