--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -17,7 +17,7 @@
 %
 %--------------------------------------------------------------------%
 
-\hypenation {
+\hyphenation {
   % A
   %
   a-na-li-sa
@@ -26,7 +26,6 @@
   an-ta-ra
   ada-nya
   akan
-  
   % B
   %
   be-be-ra-pa
@@ -38,7 +37,6 @@
   ber-fo-kus
   ber-fung-si
   ber-ja-lan
-  
   % C
   %
   ca-ri
@@ -48,7 +46,6 @@
   CloudFormation
   con-tai-ner
   ClusterIP
-  
   % D
   %
   da-e-rah
@@ -68,37 +65,29 @@
   de-ngan
   di-kem-bang-kan
   da-ta
-  
   % E
   %
   e-ner-gi
   eks-klu-sif
   eks-ter-nal
-  
   % F
   %
   fa-si-li-tas
-  
   % G
   %
   ga-bung-an
-  
   % H
   %
   ha-lang-an
   ha-sil
   hell
-  
   % I
   % 
   i-nduk
   in-for-ma-si
   im-ple-men-tasi
-  
   % J
   %
-  
-  
   % K
   %
   kom-po-si-si
@@ -114,11 +103,9 @@
   ke-gi-a-tan
   ko-mu-ni-ka-si
   ke-cil
-  
   % L
   %
   la-ya-nan
-  
   % M
   %
   me-ngu-ra-ngi
@@ -141,20 +128,16 @@
   me-ru-pa-kan
   men-ja-ga
   me-mu-dah-kan
-  MicroK8s
   me-ne-rus-
   mem-pro-ses
-  
   % N
   %
   Na-mun
-  
   % O
   %
   ob-so-lete
   or-kes-tra-si
   oto-ma-ti-sa-si
-  
   % P
   %
   pro-vi-der
@@ -169,16 +152,13 @@
   pe-man-tau-an
   pe-ngum-pu-lan
   pa-ckage
-  
   % Q
   %
   quality
-  
   % R
   %
   re-source
   re-mote
-  
   % S
   se-la-in
   stan-dar-di-sasi
@@ -189,32 +169,24 @@
   soft-ware
   se-buah
   se-ca-ra
-  
   %
-  
   % T
   % 
   ter-li-bat
   ter-pi-sah-kan
   ter-mi-nal
   ter-ba-tas
-  
   % U
   %
   un-tuk
-  
   % V
   %
-  
   % W
   %
-  
   % X
   %
-  
   % Y
   % 
-  
   % Z
   %
   zoo-keeper
