--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -13,6 +13,7 @@
 \documentclass[bahasa, 12pt, a4paper, onecolumn, oneside, final]{report}
 
 \input{config/if-itb-thesis.sty}
+\input{config/hypenation-id.tex}
 
 \makeatletter
 
